[gd_scene load_steps=8 format=3 uid="uid://dp87dol6lm1aa"]

[ext_resource type="PackedScene" uid="uid://crkqssmru087f" path="res://elements/player/player.tscn" id="1_brjn7"]
[ext_resource type="Script" path="res://main.gd" id="1_phyuh"]
[ext_resource type="PackedScene" uid="uid://da1exan0mfhmu" path="res://elements/level/level.tscn" id="2_i3s7h"]
[ext_resource type="PackedScene" uid="uid://c1lrynavlabdg" path="res://elements/ball/ball.tscn" id="3_jlaej"]
[ext_resource type="AudioStream" uid="uid://cnld5txxcv5jq" path="res://assets/BGM148-130206-abarerukaizouikimono-wav.wav" id="5_ypx8s"]
[ext_resource type="Script" path="res://save_script/saver_loader.gd" id="6_fcgqy"]
[ext_resource type="PackedScene" uid="uid://c2qv8g2kfdbh8" path="res://elements/inventory/inventory.tscn" id="6_nxqmh"]

[node name="Main" type="Node"]
script = ExtResource("1_phyuh")
ball_scene = ExtResource("3_jlaej")

[node name="Player1" parent="." instance=ExtResource("1_brjn7")]
unique_name_in_owner = true
position = Vector2(149, 322)

[node name="Player2" parent="." instance=ExtResource("1_brjn7")]
unique_name_in_owner = true
position = Vector2(999, 322)
action_up = "up_p2"
action_down = "down_p2"

[node name="Level" parent="." instance=ExtResource("2_i3s7h")]
position = Vector2(-1, -3)

[node name="Ball" parent="." instance=ExtResource("3_jlaej")]
position = Vector2(579, 322)

[node name="StartPosition1" type="Marker2D" parent="."]
position = Vector2(149, 322)

[node name="StartPosition2" type="Marker2D" parent="."]
position = Vector2(999, 322)

[node name="StartPositionBall" type="Marker2D" parent="."]
position = Vector2(579, 322)

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_ypx8s")
volume_db = 1.0

[node name="UI" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="UI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -279.0
offset_top = -104.0
offset_right = 280.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="UI/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 460

[node name="SaveButton" type="Button" parent="UI/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "SAVE"

[node name="LoadButton" type="Button" parent="UI/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "LOAD"

[node name="InventoryP1" parent="UI" instance=ExtResource("6_nxqmh")]

[node name="InventoryP2" parent="UI" instance=ExtResource("6_nxqmh")]
offset_left = 787.0
offset_right = 1126.0

[node name="Utilities" type="Node" parent="."]

[node name="SaverLoader" type="Node" parent="Utilities"]
unique_name_in_owner = true
script = ExtResource("6_fcgqy")

[connection signal="touched" from="Player1" to="." method="_on_player_1_touched"]
[connection signal="touched" from="Player2" to="." method="_on_player_2_touched"]
[connection signal="down_touched" from="Level" to="." method="_on_level_down_touched"]
[connection signal="left_touched" from="Level" to="." method="_on_level_left_touched"]
[connection signal="right_touched" from="Level" to="." method="_on_level_right_touched"]
[connection signal="up_touched" from="Level" to="." method="_on_level_up_touched"]
[connection signal="pressed" from="UI/MarginContainer/HBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="UI/MarginContainer/HBoxContainer/LoadButton" to="." method="_on_load_button_pressed"]
